Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25869

Doc links for clazy checks link to incorrect repo version

    XMLWordPrintable

Details

    • 1b1e18a86910b2f9419e1495d7fc68b698eecde1 (qt-creator/qt-creator/5.0)

    Description

      In this dialog in Qt Creator: [ see attached image ]

      The "Web Site" links go to the master branch of the docs at https://github.com/KDE/clazy/blob/master/docs.

      Rather than linking to master, they should link to the specific version that applies to whatever version of clazy ships with QtCreator / the current build kit.

      Example: The link for range-loop goes to https://github.com/KDE/clazy/blob/master/docs/checks/README-range-loop.md, which is a 404 at the time of this writing, as that check was split into two separate checks about 4 months ago.

      I'm not sure what version corresponds to my setup but, https://github.com/KDE/clazy/blob/v1.9/docs/checks/README-range-loop.md (which links to v1.9 tag rather than master) still exists, and the links in the IDE should go there (or whatever the appropriate tag/commit is).

      If it's useful:
       

      c:\Programs\Qt\Tools\QtCreator\bin\clang\bin>clazy-standalone.exe --version
      LLVM (http://llvm.org/):
       LLVM version 11.0.0
       Optimized build.
       Default target: x86_64-pc-windows-msvc
       Host CPU: skylake
      c:\Programs\Qt\Tools\QtCreator\bin\clang\bin>clazy-standalone.exe -- --version
      clang version 11.0.0 (git://code.qt.io/clang/llvm-project.git e43a39a3ed2ec0a05638956cdebfd2f7cf164692)
      Target: x86_64-pc-windows-msvc
      Thread model: posix
      InstalledDir:
      

       

      Attachments

        1. Imageeee1.png
          166 kB
          Jason Cipriani
        For Gerrit Dashboard: QTCREATORBUG-25869
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            jasonc Jason Cipriani
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes